<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12sp" />
    <TextView
        android:id="@+id/select_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_existing_widget_as_a_template"
        android:textSize="18sp" />
    <Spinner
        android:id="@+id/spinner_widgets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/config_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_hub_and_device"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_hubs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinner_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/device_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/device_name"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/select_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_text_font_size"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/text_size_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/text_size_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/small" />
        <RadioButton
            android:id="@+id/text_size_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium" />
        <RadioButton
            android:id="@+id/text_size_large"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    </RadioGroup>

    <Button
        android:id="@+id/test_control_on_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_on"
        android:textSize="14sp" />

    <Button
        android:id="@+id/test_control_off_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_off"
        android:textSize="14sp" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_button"
        android:onClick="createWidget"
        android:textSize="18sp" />

</LinearLayout>