<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"/>
    <TextView
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Checking login.."/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/black"
        android:visibility="invisible">

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:autofillHints="Email" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/black"
        android:visibility="invisible">

        <EditText
            android:id="@+id/appwidget_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_from_email"
            android:inputType="text"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
